# ai-workflow-orchestrator

./: .env  =1.57  CONTINUITY.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  audit_traces_last_10_days.json  breakdown.md  firebase.json  from google import genai  import {  knowledge_export.json  main.py  memory_last_10_days.json  orchestrator_extracted.json  payload.json  plan_2026-05-18.md  prd.md  pyproject.toml  requirements.txt  research_2026-05-18.md  research_multilingual_global.md  review_2026-05-18.md  skills-lock.json
.cm/: notebook_id  project_context.md
.gemini/: settings.json
.zed/: debug.json
agents/: __init__.py  aggregator.py  analysis.py  base_agent.py  cli.py  coding.py  critic.py  factory.py  generation.py  google_services.py  optimizer.py  security.py  solution.py  specialized.py  validation.py
api/: __init__.py  health_check.py  server.py  status_manager.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
core/: base.py  identity.py  key_manager.py  logging_setup.py  prompts.py  types.py
dashboard/: app.py
debate/: __init__.py  aggregator.py  engine.py  rounds.py
docs/: analysis.md  architecture.md  audit_traces_last_10_days.md  data-flow.md  database.md  deployment.md  index.md  sitemap-urls.txt
docs-site/: package-lock.json  package.json
execution/: manager.py  runner.py
forensics/: report_27e5294c.md
memory/: database.py  mongodb_atlas.py  orchestrator_memory.db  system.py
memory_system/: links.jsonl  memory.jsonl  memory_engine.py
mr-meeseeks-loop/: Dockerfile  README.md  (+2 more)
(+99 files in other folders)
