[project]
name = "ai-workflow-orchestrator"
version = "0.1.0"
description = "Multi-Agent Debate Engine for AI Workflow Orchestration — Google Cloud Rapid Agent Hackathon (MongoDB Track)"
readme = "README.md"
authors = [
    { name = "Usisivac V6 Autonomous Agent", email = "agent@usisivac-ai.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.1.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.11.10",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
